pull torrents list from transmission, configured in settings via env vars

--- a/txmgr/templates/txmgr/index.html
+++ b/txmgr/templates/txmgr/index.html
@@ -2,7 +2,7 @@
 {% if torrents %}
     <ul>
     {% for t in torrents %}
-        <li>t.name</li>
+        <li>{{ t.name }}</li>
     {% endfor %}
     </ul>
 {% else %}
