--- a/txmgr/templates/txmgr/index.html
+++ b/txmgr/templates/txmgr/index.html
@@ -1,10 +1,55 @@
+<!DOCTYPE html>
+<html lang="en">
 
-{% if torrents %}
-    <ul>
-    {% for t in torrents %}
-        <li>{{ t.name }}</li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No items</p>
-{% endif %}
+    <head>
+        <title>Download Manager</title>
+        <style>
+            div.torrent {
+                padding-bottom: 1em;
+            }
+
+            .torrent-title {
+                font-weight: bold;
+            }
+
+        </style>
+    </head>
+
+    <body>
+        <div class="container-fluid">
+
+            <h1>Transmission <small>Torrents</small></h1>
+
+
+            {# Load the tag library #}
+            {% load bootstrap3 %}
+
+            {# Load CSS and JavaScript #}
+            {% bootstrap_css %}
+            {% bootstrap_javascript %}
+
+            {# Display django.contrib.messages as Bootstrap alerts #}
+            {% bootstrap_messages %}
+
+            {% if torrents %}
+                {% for t in torrents %}
+                    <div class="torrent">
+                        <div class="torrent-title">{{ t.name }}</div>
+                        <div>
+                            {{ t.status }}<br/>
+                            {{ t.isFinished }}<br/>
+                            {{ t.percent_done_string }}<br/>
+                            Done date: {{ t.done_date }}<br/>
+                            Files: {{ t.files|length }}<br/>
+                            Has rars: {{ t.has_rars }}<br/>
+                        </div>
+                    </div>
+                {% endfor %}
+            {% else %}
+                <p>No items</p>
+            {% endif %}
+
+        </div>
+    </body>
+
+</html>
