--- a/txmgr/templates/txmgr/index.html
+++ b/txmgr/templates/txmgr/index.html
@@ -42,6 +42,7 @@
                             Done date: {{ t.done_date }}<br/>
                             Files: {{ t.files|length }}<br/>
                             Has rars: {{ t.has_rars }}<br/>
+                            Type: {{ t.media_type }}<br/>
                         </div>
                     </div>
                 {% endfor %}
